--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 name: astrbot_plugin_chatmaster
-version: 1.2.0
+version: 1.2.5
 author: ChatMaster
-desc: 活跃度监控插件，支持每日定时播报及手动指令检测。
-url: https://github.com/YourName/astrbot_plugin_chatmaster
+desc: 一款群聊活跃度监控插件，支持每日定时播报及手动指令检测。
+url: https://github.com/danfong1104/astrbot_plugin_chatmaster
